@@ -7,25 +7,28 @@
   <parent>
     <groupId>edu.hm.hafner</groupId>
     <artifactId>codingstyle-pom</artifactId>
-    <version>2.29.0</version>
+    <version>3.37.0</version>
     <relativePath/>
   </parent>
 
   <groupId>edu.hm.hafner</groupId>
   <artifactId>autograding-github-action</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <repositories>
-    <repository>
-      <id>repo.jenkins-ci.org</id>
-      <url>https://repo.jenkins-ci.org/public/</url>
-    </repository>
-    <repository>
-      <id>incrementals.jenkins-ci.org</id>
-      <url>https://repo.jenkins-ci.org/incrementals/</url>
-    </repository>
-  </repositories>
+  <properties>
+    <module.name>${project.groupId}.autograding.ghaction</module.name>
+
+    <java.version>17</java.version>
+
+    <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
+    <testcontainers.version>1.19.1</testcontainers.version>
+
+    <autograding-model.version>3.1.0</autograding-model.version>
+    <analysis-model.version>11.13.0</analysis-model.version>
+    <coverage-model.version>0.35.0</coverage-model.version>
+    <docker-image-tag>2.0.0-alpha</docker-image-tag>
+  </properties>
 
   <dependencyManagement>
     <dependencies>
@@ -41,7 +44,7 @@
     <dependency>
       <groupId>edu.hm.hafner</groupId>
       <artifactId>autograding-model</artifactId>
-      <version>1.3.0</version>
+      <version>${autograding-model.version}</version>
       <exclusions>
         <exclusion>
           <groupId>edu.hm.hafner</groupId>
@@ -63,13 +66,25 @@
           <groupId>commons-io</groupId>
           <artifactId>commons-io</artifactId>
         </exclusion>
+        <exclusion>
+          <artifactId>coverage-model</artifactId>
+          <groupId>edu.hm.hafner</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>codingstyle</artifactId>
+          <groupId>edu.hm.hafner</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>streamex</artifactId>
+          <groupId>one.util</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
 
     <dependency>
       <groupId>edu.hm.hafner</groupId>
       <artifactId>analysis-model</artifactId>
-      <version>10.23.1</version>
+      <version>${analysis-model.version}</version>
       <exclusions>
         <exclusion>
           <groupId>com.github.spotbugs</groupId>
@@ -80,6 +95,12 @@
           <artifactId>commons-io</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>edu.hm.hafner</groupId>
+      <artifactId>coverage-model</artifactId>
+      <version>${coverage-model.version}</version>
     </dependency>
 
     <dependency>
@@ -113,46 +134,76 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.13.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
-
-  <properties>
-    <module.name>${project.groupId}.autograding.ghaction</module.name>
-
-    <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
-  </properties>
 
   <build>
     <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>jib-maven-plugin</artifactId>
-        <version>${jib-maven-plugin.version}</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <to>
-            <image>docker.io/uhafner/autograding-github-action:1.7.3</image>
-          </to>
-          <from>
-            <image>maven:3.6.3-openjdk-8</image>
-          </from>
+          <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>com.github.ferstl</groupId>
-        <artifactId>depgraph-maven-plugin</artifactId>
-        <version>4.0.2</version>
-        <configuration>
-          <outputFileName>dependency-graph</outputFileName>
-          <outputDirectory>${project.basedir}/doc</outputDirectory>
-        </configuration>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>${jib-maven-plugin.version}</version>
         <executions>
           <execution>
-            <phase>verify</phase>
+            <id>local-docker</id>
+            <phase>pre-integration-test</phase>
             <goals>
-              <goal>graph</goal>
+              <goal>dockerBuild</goal>
             </goals>
           </execution>
+          <execution>
+            <id>docker-io</id>
+            <phase>install</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+            <configuration>
+              <to>
+                <image>docker.io/uhafner/autograding-github-action:${docker-image-tag}</image>
+                <auth>
+                  <username>${env.DOCKER_IO_USERNAME}</username>
+                  <password>${env.DOCKER_IO_PASSWORD}</password>
+                </auth>
+              </to>
+            </configuration>
+          </execution>
         </executions>
+        <configuration>
+          <to>
+            <image>docker.io/uhafner/autograding-github-action:${docker-image-tag}</image>
+            <auth>
+              <username>${env.DOCKER_IO_USERNAME}</username>
+              <password>${env.DOCKER_IO_PASSWORD}</password>
+            </auth>
+          </to>
+          <from>
+            <image>maven:3.9.5-eclipse-temurin-17</image>
+          </from>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.revapi</groupId>
@@ -161,6 +212,87 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration combine.children="append">
+          <compilerArgs>
+            <arg>-Xlint:-varargs</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            <!-- XXX: The awkward comment formatting used here ensures that the plugin arguments are
+            separated only by spaces. Once we drop support for JDK 8 we can clean this up; later versions
+            do properly handle newline separators. See https://github.com/google/error-prone/pull/1115.
+            -->
+            <arg>-Xplugin:ErrorProne <!--
+                ErrorProne configuration:
+                --> -XepExcludedPaths:.*/generated-test-sources/.* <!--
+                ErrorProne configuration:
+                --> -XepAllDisabledChecksAsWarnings <!--
+                ErrorProne configuration:
+                --> -XepIgnoreUnknownCheckNames <!--
+                ErrorProne configuration:
+                --> -XepDisableWarningsInGeneratedCode <!--
+                ErrorProne configuration:
+                --> -XepAllErrorsAsWarnings <!--
+                NullAway configuration:
+                --> -Xep:NullAway:WARN <!--
+                NullAway configuration:
+                --> -XepOpt:NullAway:AnnotatedPackages=edu.hm.hafner <!--
+                Disabled ErrorProne rule:
+                --> -Xep:ReturnMissingNullable:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:CannotMockFinalMethod:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:Java8ApiChecker:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:ImmutableMemberCollection:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:PreferJavaTimeOverload:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:EqualsGetClass:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:AndroidJdkLibsChecker:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:Java7ApiChecker:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:Var:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:PrivateConstructorForUtilityClass:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:MethodCanBeStatic:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:WildcardImport:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:ThrowsUncheckedException:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:UnusedMethod:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:BooleanParameter:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:MustBeClosedChecker:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:UnnecessaryFinal:OFF <!--
+                Disabled ErrorProne rule:
+                --> -Xep:NullableDereference:OFF
+            </arg>
+            <!-- The Error Prone plugin makes certain
+                assumptions about the state of the AST at the
+                moment it is invoked. Those assumptions are met
+                when using the `simple` compile policy. This
+                flag may be dropped after resolution of
+                https://bugs.openjdk.java.net/browse/JDK-8155674. -->
+            <arg>-XDcompilePolicy=simple</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
